@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2018, 2023, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -30,6 +30,7 @@ import javax.lang.model.element.Element;
 import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.ExecutableElement;
 import javax.lang.model.element.Modifier;
+import javax.lang.model.element.Name;
 import javax.lang.model.element.TypeElement;
 import javax.lang.model.element.VariableElement;
 import javax.lang.model.type.ArrayType;
@@ -39,10 +40,10 @@ import javax.lang.model.type.TypeKind;
 import javax.lang.model.type.TypeMirror;
 import javax.lang.model.type.WildcardType;
 import javax.lang.model.util.Elements;
-import javax.lang.model.util.SimpleElementVisitor14;
 import javax.lang.model.util.SimpleTypeVisitor14;
 import java.lang.ref.SoftReference;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumMap;
 import java.util.EnumSet;
@@ -52,8 +53,10 @@ import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import jdk.javadoc.internal.doclets.toolkit.BaseConfiguration;
@@ -63,18 +66,18 @@ import jdk.javadoc.internal.doclets.toolkit.PropertyUtils;
 /**
  * This class computes the main data structure for the doclet's
  * operations. Essentially, the implementation encapsulating the
- * javax.lang.models view of what can be documented about a
+ * javax.lang.model's view of what can be documented about a
  * type element's members.
  * <p>
  * The general operations are as follows:
  * <p>
- * Members: these are the members from jx.l.m's view but
+ * Members: these are the members from j.l.m's view but
  * are structured along the kinds of this class.
  * <p>
  * Extra Members: these are members enclosed in an undocumented
  * package-private type element, and may not be linkable (or documented),
  * however, the members of such a type element may be documented, as if
- * declared in the sub type, only if the enclosing type is not being
+ * declared in the subtype, only if the enclosing type is not being
  * documented by a filter such as -public, -protected, etc.
  * <p>
  * Visible Members: these are the members that are "visible"
@@ -87,14 +90,7 @@ import jdk.javadoc.internal.doclets.toolkit.PropertyUtils;
  * This table generates all the data structures it needs for each
  * type, as its own view, and will present some form of this to the
  * doclet as and when required to.
- *
- * <p><b>This is NOT part of any supported API.
- * If you write code that depends on this, you do so at your own risk.
- * This code and its internal interfaces are subject to change or
- * deletion without notice.</b>
- *
  */
-
 public class VisibleMemberTable {
 
     public enum Kind {
@@ -146,23 +142,49 @@ public class VisibleMemberTable {
         }
     }
 
-    final TypeElement te;
-    final TypeElement parent;
+    /** The class or interface described by this table. */
+    private final TypeElement te;
+    /**
+     * The superclass of {@link #te} or null if {@code te} is an
+     * interface or {@code java.lang.Object}.
+     */
+    private final TypeElement parent;
 
-    final BaseConfiguration config;
-    final BaseOptions options;
-    final Utils utils;
-    final VisibleMemberCache mcache;
+    private final BaseConfiguration config;
+    private final BaseOptions options;
+    private final Utils utils;
+    private final VisibleMemberCache mcache;
 
-    private final List<VisibleMemberTable> allSuperclasses;
+    /**
+     * Tables for direct and indirect superclasses.
+     *
+     * Tables for superclasses must be unique: no class can appear multiple
+     * times in the inheritance hierarchy for some other class.
+     */
+    private final Set<VisibleMemberTable> allSuperclasses;
+    /**
+     * Tables for direct and indirect superinterfaces.
+     *
+     * Tables for superinterfaces might not be unique (i.e. an interface
+     * may be added from different lineages).
+     */
     private final List<VisibleMemberTable> allSuperinterfaces;
-    private final List<VisibleMemberTable> parents;
+    /**
+     * Tables for direct superclass and direct superinterfaces.
+     *
+     * The position of a table for the superclass in the list is unspecified.
+     */
+    private final Set<VisibleMemberTable> parents;
 
-    private Map<Kind, List<Element>> visibleMembers = null;
+    private Map<Kind, List<Element>> visibleMembers;
     private final Map<ExecutableElement, PropertyMembers> propertyMap = new HashMap<>();
 
-    // Keeps track of method overrides
-    Map<ExecutableElement, OverriddenMethodInfo> overriddenMethodTable
+    //  FIXME: Figure out why it is one-one and not one-to-many.
+    /**
+     * Maps a method m declared in {@code te} to a visible method m' in a
+     * {@code te}'s supertype such that m overrides m'.
+     */
+    private final Map<ExecutableElement, OverrideInfo> overriddenMethodTable
             = new LinkedHashMap<>();
 
     protected VisibleMemberTable(TypeElement typeElement, BaseConfiguration configuration,
@@ -171,14 +193,14 @@ public class VisibleMemberTable {
         utils = configuration.utils;
         options = configuration.getOptions();
         te = typeElement;
-        parent = utils.getSuperClass(te);
+        parent = (TypeElement) utils.typeUtils.asElement(te.getSuperclass());
         this.mcache = mcache;
-        allSuperclasses = new ArrayList<>();
+        allSuperclasses = new LinkedHashSet<>();
         allSuperinterfaces = new ArrayList<>();
-        parents = new ArrayList<>();
+        parents = new LinkedHashSet<>();
     }
 
-    private synchronized void ensureInitialized() {
+    private void ensureInitialized() {
         if (visibleMembers != null)
             return;
 
@@ -190,12 +212,12 @@ public class VisibleMemberTable {
         computeVisibleMembers();
     }
 
-    List<VisibleMemberTable> getAllSuperclasses() {
+    private Set<VisibleMemberTable> getAllSuperclasses() {
         ensureInitialized();
         return allSuperclasses;
     }
 
-    List<VisibleMemberTable> getAllSuperinterfaces() {
+    private List<VisibleMemberTable> getAllSuperinterfaces() {
         ensureInitialized();
         return allSuperinterfaces;
     }
@@ -208,11 +230,11 @@ public class VisibleMemberTable {
      * a. The list may or may not contain simple overridden methods.
      * A simple overridden method is one that overrides a super method
      * with no specification changes as indicated by the existence of a
-     * sole &commat;inheritDoc or devoid of any API comments.
+     * sole {@code {@inheritDoc}} or devoid of any API comments.
      * <p>
      * b.The list may contain (extra) members, inherited by inaccessible
-     * super types, primarily package private types. These members are
-     * required to be documented in the subtype when the super type is
+     * supertypes, primarily package private types. These members are
+     * required to be documented in the subtype when the supertype is
      * not documented.
      *
      * @param kind the member kind
@@ -220,7 +242,7 @@ public class VisibleMemberTable {
      */
     public List<Element> getAllVisibleMembers(Kind kind) {
         ensureInitialized();
-        return visibleMembers.getOrDefault(kind, Collections.emptyList());
+        return visibleMembers.getOrDefault(kind, List.of());
     }
 
     /**
@@ -232,8 +254,7 @@ public class VisibleMemberTable {
      */
     public List<Element> getVisibleMembers(Kind kind, Predicate<Element> p) {
         ensureInitialized();
-
-        return visibleMembers.getOrDefault(kind, Collections.emptyList()).stream()
+        return visibleMembers.getOrDefault(kind, List.of()).stream()
                 .filter(p)
                 .toList();
     }
@@ -248,7 +269,7 @@ public class VisibleMemberTable {
     public List<Element> getVisibleMembers(Kind kind) {
         Predicate<Element> declaredAndLeafMembers = e -> {
             TypeElement encl = utils.getEnclosingTypeElement(e);
-            return encl == te || utils.isUndocumentedEnclosure(encl);
+            return Objects.equals(encl, te) || utils.isUndocumentedEnclosure(encl);
         };
         return getVisibleMembers(kind, declaredAndLeafMembers);
     }
@@ -261,52 +282,59 @@ public class VisibleMemberTable {
      * @return a list of visible enclosed members in this type
      */
     public List<Element> getMembers(Kind kind) {
-        Predicate<Element> onlyLocallyDeclaredMembers = e -> utils.getEnclosingTypeElement(e) == te;
+        Predicate<Element> onlyLocallyDeclaredMembers = e -> Objects.equals(utils.getEnclosingTypeElement(e), te);
         return getVisibleMembers(kind, onlyLocallyDeclaredMembers);
     }
 
     /**
-     * Returns the overridden method, if it is simply overriding or the
-     * method is a member of a package private type, this method is
-     * primarily used to determine the location of a possible comment.
+     * Returns the method overridden by the provided method, or {@code null}.
+     *
+     * Sometimes it's not possible to link to a method that a link, linkplain,
+     * or see tag mentions. This is because the method is a "simple override"
+     * and, thus, has no useful documentation, or because the method is
+     * declared in a type that has package access and, thus, has no visible
+     * documentation.
+     *
+     * Call this method to determine if any of the above is the case. If the
+     * call returns a method element, link to that method element instead of
+     * the provided method.
      *
      * @param e the method to check
-     * @return the method found or null
+     * @return the method found or {@code null}
      */
     public ExecutableElement getOverriddenMethod(ExecutableElement e) {
+        // TODO: consider possible ambiguities: multiple overridden methods
         ensureInitialized();
-
-        OverriddenMethodInfo found = overriddenMethodTable.get(e);
+        assert !overriddenMethodTable.containsKey(null);
+        OverrideInfo found = overriddenMethodTable.get(e);
         if (found != null
                 && (found.simpleOverride || utils.isUndocumentedEnclosure(utils.getEnclosingTypeElement(e)))) {
-            return found.overridden;
+            return found.overriddenMethod;
         }
         return null;
     }
 
     /**
-     * Returns the simply overridden method.
+     * {@return true if the specified method is NOT a simple override of some
+     * other method, otherwise false}
+     *
      * @param e the method to check
-     * @return the overridden method or null
      */
-    public ExecutableElement getSimplyOverriddenMethod(ExecutableElement e) {
+    private boolean isNotSimpleOverride(ExecutableElement e) {
         ensureInitialized();
 
-        OverriddenMethodInfo found = overriddenMethodTable.get(e);
-        if (found != null && found.simpleOverride) {
-            return found.overridden;
-        }
-        return null;
+        var info = overriddenMethodTable.get(e);
+        return info == null || !info.simpleOverride;
     }
 
     /**
      * Returns a set of visible type elements in this type element's lineage.
      * <p>
-     * This method returns the super-types in the inheritance
-     * order C, B, A, j.l.O. The super-interfaces however are
+     * This method returns the supertypes in the inheritance
+     * order C, B, A, j.l.O. The superinterfaces however are
      * alpha sorted and appended to the resulting set.
      *
-     * @return the list of visible classes in this map.
+     * @return the set of visible classes in this map
      */
     public Set<TypeElement> getVisibleTypeElements() {
         ensureInitialized();
@@ -315,12 +343,12 @@ public class VisibleMemberTable {
         // Add this type element first.
         result.add(te);
 
-        // Add the super classes.
+        // Add the superclasses.
         allSuperclasses.stream()
                 .map(vmt -> vmt.te)
                 .forEach(result::add);
 
-        // ... and finally the sorted super interfaces.
+        // ... and finally the sorted superinterfaces.
         allSuperinterfaces.stream()
                 .map(vmt -> vmt.te)
                 .sorted(utils.comparators.makeGeneralPurposeComparator())
@@ -408,8 +436,8 @@ public class VisibleMemberTable {
     }
 
     private void computeParents() {
-        // suppress parents of annotation types
-        if (utils.isAnnotationType(te)) {
+        // suppress parents of annotation interfaces
+        if (utils.isAnnotationInterface(te)) {
             return;
         }
 
@@ -418,7 +446,8 @@ public class VisibleMemberTable {
             if (intfc != null) {
                 VisibleMemberTable vmt = mcache.getVisibleMemberTable(intfc);
                 allSuperinterfaces.add(vmt);
-                parents.add(vmt);
+                boolean added = parents.add(vmt);
+                assert added; // no duplicates
                 allSuperinterfaces.addAll(vmt.getAllSuperinterfaces());
             }
         }
@@ -426,10 +455,12 @@ public class VisibleMemberTable {
         if (parent != null) {
             VisibleMemberTable vmt = mcache.getVisibleMemberTable(parent);
             allSuperclasses.add(vmt);
+            assert Collections.disjoint(allSuperclasses, vmt.getAllSuperclasses()); // no duplicates
             allSuperclasses.addAll(vmt.getAllSuperclasses());
-            // Add direct super interfaces of a super class, if any.
+            // Add direct and indirect superinterfaces of a superclass.
             allSuperinterfaces.addAll(vmt.getAllSuperinterfaces());
-            parents.add(vmt);
+            boolean added = parents.add(vmt);
+            assert added; // no duplicates
         }
     }
 
@@ -471,14 +502,15 @@ public class VisibleMemberTable {
     }
 
     private boolean mustDocument(Element e) {
-        return !utils.hasHiddenTag(e) && utils.shouldDocument(e);
+        // these checks are ordered in a particular way to avoid parsing unless absolutely necessary
+        return utils.shouldDocument(e) && !utils.hasHiddenTag(e);
     }
 
     private boolean allowInheritedMembers(Element e, Kind kind, LocalMemberTable lmt) {
-        return isInherited(e) && !isMemberHidden(e, kind, lmt);
+        return isAccessible(e) && !isMemberHidden(e, kind, lmt);
     }
 
-    private boolean isInherited(Element e) {
+    private boolean isAccessible(Element e) {
         if (utils.isPrivate(e))
             return false;
 
@@ -493,7 +525,7 @@ public class VisibleMemberTable {
         Elements elementUtils = config.docEnv.getElementUtils();
         switch(kind) {
             default:
-                List<Element> list = lmt.getMembers(inheritedMember, kind);
+                List<Element> list = lmt.getMembers(inheritedMember.getSimpleName(), kind);
                 if (list.isEmpty())
                     return false;
                 return elementUtils.hides(list.get(0), inheritedMember);
@@ -522,77 +554,127 @@ public class VisibleMemberTable {
         visibleMembers.put(kind, list);
     }
 
+    // This method computes data structures related to method members
+    // of a class or an interface.
+    //
+    // TODO The computation is performed manually, by applying JLS rules.
+    //  While jdk.javadoc does need custom and specialized data structures,
+    //  this method does not feel DRY. It should be possible to improve
+    //  it by delegating some, if not most, of the JLS wrestling to
+    //  javax.lang.model. For example, while it cannot help us get the
+    //  structures, such as overriddenMethodTable, javax.lang.model can
+    //  help us get all method members of a class or an interface t by calling
+    //  ElementFilter.methodsIn(Elements.getAllMembers(t)).
     private void computeVisibleMethods(LocalMemberTable lmt) {
-        Set<Element> inheritedMethods = new LinkedHashSet<>();
-        Map<ExecutableElement, List<ExecutableElement>> overriddenByTable = new HashMap<>();
-        for (VisibleMemberTable pvmt : parents) {
-            // Merge the lineage overrides into local table
-            pvmt.overriddenMethodTable.entrySet().forEach(e -> {
-                OverriddenMethodInfo p = e.getValue();
-                if (!p.simpleOverride) { // consider only real overrides
-                    List<ExecutableElement> list = overriddenByTable.computeIfAbsent(p.overridden,
-                            k -> new ArrayList<>());
-                    list.add(e.getKey());
-                }
-            });
-            inheritedMethods.addAll(pvmt.getAllVisibleMembers(Kind.METHODS));
+        // parentMethods is a union of visible methods from all parents.
+        // It is used to figure out which methods this type should inherit.
+        // Inherited methods are those parent methods that remain after all
+        // methods that cannot be inherited are eliminated.
+        Set<Element> parentMethods = new LinkedHashSet<>();
+        for (var p : parents) {
+            // Lists of visible methods from different parents may share some
+            // methods. These are the methods that the parents inherited from
+            // their common ancestor.
+            //
+            // Such methods won't result in duplicates in parentMethods as we
+            // purposefully don't track duplicates.
+            // FIXME: add a test to assert the order (LinkedHashSet)
+            parentMethods.addAll(p.getAllVisibleMembers(Kind.METHODS));
         }
 
-        // Filter out inherited methods that:
-        // a. cannot be overridden (private instance members)
-        // b. are overridden and should not be visible in this type
-        // c. are hidden in the type being considered
-        // see allowInheritedMethod, which performs the above actions
+        // overriddenByTable maps an ancestor (grandparent and above) method
+        // to parent methods that override it:
+        //
+        // key
+        // : a method overridden by one or more parent methods
+        // value
+        // : a list of parent methods that override the key
+        Map<ExecutableElement, List<ExecutableElement>> overriddenByTable = new HashMap<>();
+        for (var p : parents) {
+            // Merge the lineage overrides into local table
+            p.overriddenMethodTable.forEach((method, methodInfo) -> {
+                if (!methodInfo.simpleOverride) { // consider only real overrides
+                    var list = overriddenByTable.computeIfAbsent(methodInfo.overriddenMethod,
+                            k -> new ArrayList<>());
+                    list.add(method);
+                }
+            });
+        }
+
+        // filter out methods that aren't inherited
+        //
         // nb. This statement has side effects that can initialize
-        // members of the overridenMethodTable field, so it must be
+        // members of the overriddenMethodTable field, so it must be
         // evaluated eagerly with toList().
-        List<Element> inheritedMethodsList = inheritedMethods.stream()
+        List<Element> inheritedMethods = parentMethods.stream()
                 .filter(e -> allowInheritedMethod((ExecutableElement) e, overriddenByTable, lmt))
                 .toList();
 
-        // Filter out the local methods, that do not override or simply
-        // overrides a super method, or those methods that should not
-        // be visible.
-        Predicate<ExecutableElement> isVisible = m -> {
-            OverriddenMethodInfo p = overriddenMethodTable.getOrDefault(m, null);
-            return p == null || !p.simpleOverride;
+        // filter out "simple overrides" from local methods
+        Predicate<ExecutableElement> nonSimpleOverride = m -> {
+            OverrideInfo i = overriddenMethodTable.get(m);
+            return i == null || !i.simpleOverride;
         };
 
         Stream<ExecutableElement> localStream = lmt.getOrderedMembers(Kind.METHODS)
                 .stream()
                 .map(m -> (ExecutableElement)m)
-                .filter(isVisible);
+                .filter(nonSimpleOverride);
 
         // Merge the above list and stream, making sure the local methods precede the others
         // Final filtration of elements
-        List<Element> list = Stream.concat(localStream,inheritedMethodsList.stream())
+        // FIXME add a test to assert the order or remove that part of the comment above ^
+        List<Element> list = Stream.concat(localStream, inheritedMethods.stream())
                 .filter(this::mustDocument)
                 .toList();
 
         visibleMembers.put(Kind.METHODS, list);
 
-        // Copy over overridden tables from the lineage, and finish up.
+        // copy over overridden tables from the lineage
         for (VisibleMemberTable pvmt : parents) {
+            // a key in overriddenMethodTable is a method _declared_ in the respective parent;
+            // no two _different_ parents can share a declared method, by definition;
+            // if parents in the list are different (i.e. the list of parents doesn't contain duplicates),
+            //   then no keys are equal and thus no replace happens
+            // if the list of parents contains duplicates, values for the equal keys are equal,
+            //   so no harm if they are replaced in the map
+            assert putAllIsNonReplacing(overriddenMethodTable, pvmt.overriddenMethodTable);
             overriddenMethodTable.putAll(pvmt.overriddenMethodTable);
         }
-        overriddenMethodTable = Collections.unmodifiableMap(overriddenMethodTable);
     }
 
-    boolean isEnclosureInterface(Element e) {
-        TypeElement enclosing = utils.getEnclosingTypeElement(e);
-        return utils.isInterface(enclosing);
+    private static <K, V> boolean putAllIsNonReplacing(Map<K, V> dst, Map<K, V> src) {
+        for (var e : src.entrySet()) {
+            if (dst.containsKey(e.getKey())
+                    && !Objects.equals(dst.get(e.getKey()), e.getValue())) {
+                return false;
+            }
+        }
+        return true;
     }
 
-    boolean allowInheritedMethod(ExecutableElement inheritedMethod,
-                                 Map<ExecutableElement, List<ExecutableElement>> overriddenByTable,
-                                 LocalMemberTable lmt) {
-        if (!isInherited(inheritedMethod))
+    private boolean allowInheritedMethod(ExecutableElement inheritedMethod,
+                                         Map<ExecutableElement, List<ExecutableElement>> overriddenByTable,
+                                         LocalMemberTable lmt) {
+        // JLS 8.4.8: A class does not inherit private or static methods from
+        // its superinterface types.
+        //
+        // JLS 9.4.1: An interface does not inherit private or static methods
+        // from its superinterfaces.
+        //
+        // JLS 8.4.8: m is public, protected, or declared with package access
+        // in the same package as C
+        //
+        // JLS 9.4: A method in the body of an interface declaration may be
+        // declared public or private. If no access modifier is given, the
+        // method is implicitly public.
+        if (!isAccessible(inheritedMethod))
             return false;
 
         final boolean haveStatic = utils.isStatic(inheritedMethod);
-        final boolean inInterface = isEnclosureInterface(inheritedMethod);
+        final boolean inInterface = isDeclaredInInterface(inheritedMethod);
 
-        // Static methods in interfaces are never documented.
+        // Static interface methods are never inherited (JLS 8.4.8 and 9.1.3)
         if (haveStatic && inInterface) {
             return false;
         }
@@ -609,7 +691,7 @@ public class VisibleMemberTable {
             List<ExecutableElement> list = overriddenByTable.get(inheritedMethod);
             if (list != null) {
                 boolean found = list.stream()
-                        .anyMatch(this::isEnclosureInterface);
+                        .anyMatch(this::isDeclaredInInterface);
                 if (found)
                     return false;
             }
@@ -618,11 +700,12 @@ public class VisibleMemberTable {
         Elements elementUtils = config.docEnv.getElementUtils();
 
         // Check the local methods in this type.
-        List<Element> lMethods = lmt.getMembers(inheritedMethod, Kind.METHODS);
+        // List contains overloads and probably something else, but one match is enough, hence short-circuiting
+        List<Element> lMethods = lmt.getMembers(inheritedMethod.getSimpleName(), Kind.METHODS);
         for (Element le : lMethods) {
             ExecutableElement lMethod = (ExecutableElement) le;
             // Ignore private methods or those methods marked with
-            // a "hidden" tag.
+            // a "hidden" tag. // FIXME I cannot see where @hidden is ignored
             if (utils.isPrivate(lMethod))
                 continue;
 
@@ -636,11 +719,16 @@ public class VisibleMemberTable {
             if (elementUtils.overrides(lMethod, inheritedMethod,
                     utils.getEnclosingTypeElement(lMethod))) {
 
+                assert utils.getEnclosingTypeElement(lMethod).equals(te);
+
                 // Disallow package-private super methods to leak in
                 TypeElement encl = utils.getEnclosingTypeElement(inheritedMethod);
                 if (utils.isUndocumentedEnclosure(encl)) {
+                    // FIXME
+                    //  is simpleOverride=false here to force to be used because
+                    //  it cannot be linked to, because package-private?
                     overriddenMethodTable.computeIfAbsent(lMethod,
-                            l -> new OverriddenMethodInfo(inheritedMethod, false));
+                            l -> new OverrideInfo(inheritedMethod, false));
                     return false;
                 }
 
@@ -652,11 +740,15 @@ public class VisibleMemberTable {
                         && !overridingSignatureChanged(lMethod, inheritedMethod)
                         && !overriddenByTable.containsKey(inheritedMethod);
                 overriddenMethodTable.computeIfAbsent(lMethod,
-                        l -> new OverriddenMethodInfo(inheritedMethod, simpleOverride));
+                        l -> new OverrideInfo(inheritedMethod, simpleOverride));
                 return simpleOverride;
             }
         }
         return true;
+    }
+
+    private boolean isDeclaredInInterface(ExecutableElement e) {
+        return e.getEnclosingElement().getKind() == ElementKind.INTERFACE;
     }
 
     // Check whether the signature of an overriding method has any changes worth
@@ -744,25 +836,18 @@ public class VisibleMemberTable {
     }
 
     /*
-     * This class encapsulates the details of local members, orderedMembers
-     * contains the members in the declaration order, additionally a
-     * HashMap is maintained for performance optimization to lookup
-     * members. As a future enhancement is perhaps to consolidate the ordering
-     * into a Map, capturing the insertion order, thereby eliminating an
-     * ordered list.
+     * A container of members declared in this class or interface. Members of
+     * the same kind stored in declaration order. The container supports
+     * efficient lookup by a member's simple name.
      */
-    class LocalMemberTable {
+    private class LocalMemberTable {
 
-        // Maintains declaration order
-        private final Map<Kind, List<Element>> orderedMembers;
-
-        // Performance optimization
-        private final Map<Kind, Map<String, List<Element>>> memberMap;
+        final Map<Kind, List<Element>> orderedMembers = new EnumMap<>(Kind.class);
+        final Map<Kind, Map<Name, List<Element>>> namedMembers = new EnumMap<>(Kind.class);
 
         LocalMemberTable() {
-            orderedMembers = new EnumMap<>(Kind.class);
-            memberMap = new EnumMap<>(Kind.class);
-
+            // elements directly declared by this class or interface,
+            // listed in declaration order
             List<? extends Element> elements = te.getEnclosedElements();
             for (Element e : elements) {
                 if (options.noDeprecated() && utils.isDeprecated(e)) {
@@ -779,11 +864,13 @@ public class VisibleMemberTable {
                     case FIELD:
                         addMember(e, Kind.FIELDS);
                         break;
+                    case ENUM_CONSTANT:
+                        addMember(e, Kind.ENUM_CONSTANTS);
+                        break;
                     case METHOD:
-                        if (utils.isAnnotationType(te)) {
-                            ExecutableElement ee = (ExecutableElement) e;
+                        if (utils.isAnnotationInterface(te)) {
                             addMember(e, Kind.ANNOTATION_TYPE_MEMBER);
-                            addMember(e, ee.getDefaultValue() == null
+                            addMember(e, ((ExecutableElement) e).getDefaultValue() == null
                                     ? Kind.ANNOTATION_TYPE_MEMBER_REQUIRED
                                     : Kind.ANNOTATION_TYPE_MEMBER_OPTIONAL);
                         } else {
@@ -791,79 +878,53 @@ public class VisibleMemberTable {
                         }
                         break;
                     case CONSTRUCTOR:
-                            addMember(e, Kind.CONSTRUCTORS);
-                        break;
-                    case ENUM_CONSTANT:
-                        addMember(e, Kind.ENUM_CONSTANTS);
+                        addMember(e, Kind.CONSTRUCTORS);
                         break;
                 }
             }
 
-            // Freeze the data structures
-            for (Kind kind : Kind.values()) {
-                orderedMembers.computeIfPresent(kind, (k, v) -> Collections.unmodifiableList(v));
-                orderedMembers.computeIfAbsent(kind, t -> Collections.emptyList());
-
-                memberMap.computeIfPresent(kind, (k, v) -> Collections.unmodifiableMap(v));
-                memberMap.computeIfAbsent(kind, t -> Collections.emptyMap());
-            }
+            // protect element lists from unintended changes by clients
+            orderedMembers.replaceAll(this::sealList);
+            namedMembers.values().forEach(m -> m.replaceAll(this::sealList));
         }
 
-        String getMemberKey(Element e) {
-            return new SimpleElementVisitor14<String, Void>() {
-                @Override
-                public String visitExecutable(ExecutableElement e, Void aVoid) {
-                    return e.getSimpleName() + ":" + e.getParameters().size();
-                }
-
-                @Override
-                protected String defaultAction(Element e, Void aVoid) {
-                    return e.getSimpleName().toString();
-                }
-            }.visit(e);
+        private <K, V> List<V> sealList(K unusedKey, List<V> v) {
+            return Collections.unmodifiableList(v);
         }
 
         void addMember(Element e, Kind kind) {
-            List<Element> list = orderedMembers.computeIfAbsent(kind, k -> new ArrayList<>());
-            list.add(e);
-
-            Map<String, List<Element>> map = memberMap.computeIfAbsent(kind, k -> new HashMap<>());
-            list = map.computeIfAbsent(getMemberKey(e), l -> new ArrayList<>());
-            list.add(e);
+            orderedMembers.computeIfAbsent(kind, k -> new ArrayList<>()).add(e);
+            namedMembers.computeIfAbsent(kind, k -> new HashMap<>())
+                    .computeIfAbsent(e.getSimpleName(), l -> new ArrayList<>())
+                    .add(e);
         }
 
         List<Element> getOrderedMembers(Kind kind) {
-            return orderedMembers.get(kind);
+            return orderedMembers.getOrDefault(kind, List.of());
         }
 
-        List<Element> getMembers(Element e, Kind kind) {
-            String key = getMemberKey(e);
-            return getMembers(key, kind);
+        List<Element> getMembers(Name simpleName, Kind kind) {
+            return namedMembers.getOrDefault(kind, Map.of())
+                    .getOrDefault(simpleName, List.of());
         }
 
-        List<Element> getMembers(String key, Kind kind) {
-            Map<String, List<Element>> map = memberMap.get(kind);
-            return map.getOrDefault(key, Collections.emptyList());
-        }
-
-        <T extends Element> List<T> getMembers(String key, Kind kind, Class<T> clazz) {
-            Map<String, List<Element>> map = memberMap.get(kind);
-            return map.getOrDefault(key, Collections.emptyList())
+        <T extends Element> List<T> getMembers(Name simpleName, Kind kind, Class<T> clazz) {
+            return getMembers(simpleName, kind)
                     .stream()
-                    .map(e -> clazz.cast(e))
+                    .map(clazz::cast)
                     .toList();
         }
 
-        List<ExecutableElement> getPropertyMethods(String methodName, int argcount) {
-            return getMembers(methodName + ":" + argcount, Kind.METHODS).stream()
+        List<ExecutableElement> getPropertyMethods(Name simpleName) {
+            return getMembers(simpleName, Kind.METHODS).stream()
                     .filter(m -> (utils.isPublic(m) || utils.isProtected(m)))
                     .map(m -> (ExecutableElement) m)
                     .toList();
         }
     }
 
-    record PropertyMembers(ExecutableElement propertyMethod, VariableElement field,
-                           ExecutableElement getter, ExecutableElement setter) { }
+    private record PropertyMembers(ExecutableElement propertyMethod, VariableElement field,
+                                   ExecutableElement getter, ExecutableElement setter) { }
 
     /*
      * JavaFX convention notes.
@@ -904,7 +965,7 @@ public class VisibleMemberTable {
             return;
 
         PropertyUtils pUtils = config.propertyUtils;
-        List<Element> list = visibleMembers.getOrDefault(Kind.METHODS, Collections.emptyList())
+        List<Element> list = visibleMembers.getOrDefault(Kind.METHODS, List.of())
                 .stream()
                 .filter(e -> pUtils.isPropertyMethod((ExecutableElement) e))
                 .toList();
@@ -913,41 +974,41 @@ public class VisibleMemberTable {
 
         List<ExecutableElement> propertyMethods = list.stream()
                 .map(e -> (ExecutableElement) e)
-                .filter(e -> utils.getEnclosingTypeElement(e) == te)
+                .filter(e -> Objects.equals(utils.getEnclosingTypeElement(e), te))
                 .toList();
 
         // Compute additional properties related sundries.
         for (ExecutableElement propertyMethod : propertyMethods) {
             String baseName = pUtils.getBaseName(propertyMethod);
-            List<VariableElement> flist = lmt.getMembers(baseName, Kind.FIELDS, VariableElement.class);
+            List<VariableElement> flist = lmt.getMembers(utils.elementUtils.getName(baseName), Kind.FIELDS, VariableElement.class);
             VariableElement field = flist.isEmpty() ? null : flist.get(0);
 
-            ExecutableElement getter = null, setter = null;
-            List<ExecutableElement> found = lmt.getPropertyMethods(pUtils.getGetName(propertyMethod), 0);
-            if (!found.isEmpty()) {
-                // Getters have zero params, no overloads! pick the first.
-                getter = found.get(0);
-            }
-            if (getter == null) {
+            // TODO: this code does not seem to be covered by tests well (JDK-8304170)
+            ExecutableElement getter = null;
+            var g = lmt.getPropertyMethods(utils.elementUtils.getName(pUtils.getGetName(propertyMethod))).stream()
+                    .filter(m -> m.getParameters().isEmpty()) // Getters have zero params, no overloads!
+                    .findAny();
+            if (g.isPresent()) {
+                getter = g.get();
+            } else {
                 // Check if isProperty methods are present ?
-                found = lmt.getPropertyMethods(pUtils.getIsName(propertyMethod), 0);
-                if (!found.isEmpty()) {
+                var i = lmt.getPropertyMethods(utils.elementUtils.getName(pUtils.getIsName(propertyMethod))).stream()
+                        .filter(m -> m.getParameters().isEmpty())
+                        .findAny();
+                if (i.isPresent()) {
                     // Check if the return type of property method matches an isProperty method.
                     if (pUtils.hasIsMethod(propertyMethod)) {
-                        // Getters have zero params, no overloads!, pick the first.
-                        getter = found.get(0);
+                        // Getters have zero params, no overloads!
+                        getter = i.get();
                     }
                 }
             }
-            found = lmt.getPropertyMethods(pUtils.getSetName(propertyMethod), 1);
-            if (found != null) {
-                for (ExecutableElement e : found) {
-                    if (pUtils.isValidSetterMethod(e)) {
-                        setter = e;
-                        break;
-                    }
-                }
-            }
+
+            var setter = lmt.getPropertyMethods(utils.elementUtils.getName(pUtils.getSetName(propertyMethod))).stream()
+                    // TODO: the number and the types of parameters a setter takes is not tested (JDK-8304170)
+                    .filter(m -> m.getParameters().size() == 1 && pUtils.isValidSetterMethod(m))
+                    .findAny()
+                    .orElse(null);
 
             PropertyMembers pm = new PropertyMembers(propertyMethod, field, getter, setter);
             propertyMap.put(propertyMethod, pm);
@@ -967,7 +1028,8 @@ public class VisibleMemberTable {
 
     // Future cleanups
 
-    Map<ExecutableElement, SoftReference<ImplementedMethods>> implementMethodsFinders = new HashMap<>();
+    private final Map<ExecutableElement, SoftReference<ImplementedMethods>>
+            implementMethodsFinders = new HashMap<>();
 
     private ImplementedMethods getImplementedMethodsFinder(ExecutableElement method) {
         SoftReference<ImplementedMethods> ref = implementMethodsFinders.get(method);
@@ -983,7 +1045,7 @@ public class VisibleMemberTable {
     public List<ExecutableElement> getImplementedMethods(ExecutableElement method) {
         ImplementedMethods imf = getImplementedMethodsFinder(method);
         return imf.getImplementedMethods().stream()
-                .filter(m -> getSimplyOverriddenMethod(m) == null)
+                .filter(this::isNotSimpleOverride)
                 .toList();
     }
 
@@ -995,113 +1057,86 @@ public class VisibleMemberTable {
 
     private class ImplementedMethods {
 
-        private final Map<ExecutableElement, TypeMirror> interfaces = new HashMap<>();
-        private final List<ExecutableElement> methlist = new ArrayList<>();
+        private final Map<ExecutableElement, TypeMirror> interfaces = new LinkedHashMap<>();
 
-        public ImplementedMethods(ExecutableElement method) {
-            TypeElement typeElement = utils.getEnclosingTypeElement(method);
-            Set<TypeMirror> intfacs = utils.getAllInterfaces(typeElement);
-            /*
-             * Search for the method in the list of interfaces. If found check if it is
-             * overridden by any other subinterface method which this class
-             * implements. If it is not overridden, add it in the method list.
-             * Do this recursively for all the extended interfaces for each interface
-             * from the list.
-             */
-            for (TypeMirror interfaceType : intfacs) {
-                ExecutableElement found = utils.findMethod(utils.asTypeElement(interfaceType), method);
-                if (found != null) {
-                    removeOverriddenMethod(found);
-                    if (!overridingMethodFound(found)) {
-                        methlist.add(found);
-                        interfaces.put(found, interfaceType);
-                    }
+        public ImplementedMethods(ExecutableElement implementer) {
+            var typeElement = (TypeElement) implementer.getEnclosingElement();
+            for (TypeMirror i : utils.getAllInterfaces(typeElement)) {
+                TypeElement dst = utils.asTypeElement(i); // a type element to look an implemented method in
+                ExecutableElement implemented = findImplementedMethod(dst, implementer);
+                if (implemented == null) {
+                    continue;
                 }
+                var prev = interfaces.put(implemented, i);
+                // no two type elements declare the same method
+                assert prev == null;
+                // dst can be generic, while i might be parameterized; but they
+                // must the same type element. For example, if dst is Set<T>,
+                // then i is Set<String>
+                assert Objects.equals(((DeclaredType) i).asElement(), dst);
             }
         }
 
+        private ExecutableElement findImplementedMethod(TypeElement te, ExecutableElement implementer) {
+            var typeElement = (TypeElement) implementer.getEnclosingElement();
+            for (var m : utils.getMethods(te)) {
+                if (utils.elementUtils.overrides(implementer, m, typeElement)) {
+                    return m;
+                }
+            }
+            return null;
+        }
+
         /**
-         * Return the list of interface methods which the method passed in the
+         * Returns a collection of interface methods which the method passed in the
          * constructor is implementing. The search/build order is as follows:
          * <pre>
          * 1. Search in all the immediate interfaces which this method's class is
          *    implementing. Do it recursively for the superinterfaces as well.
          * 2. Traverse all the superclasses and search recursively in the
          *    interfaces which those superclasses implement.
-         *</pre>
+         * </pre>
          *
-         * @return SortedSet<ExecutableElement> of implemented methods.
+         * @return a collection of implemented methods
          */
-        List<ExecutableElement> getImplementedMethods() {
-            return methlist;
+        Collection<ExecutableElement> getImplementedMethods() {
+            return interfaces.keySet();
         }
 
         TypeMirror getMethodHolder(ExecutableElement ee) {
             return interfaces.get(ee);
         }
+    }
 
-        /**
-         * Search in the method list and check if it contains a method which
-         * is overridden by the method as parameter.  If found, remove the
-         * overridden method from the method list.
-         *
-         * @param method Is this method overriding a method in the method list.
-         */
-        private void removeOverriddenMethod(ExecutableElement method) {
-            TypeElement overriddenClass = utils.overriddenClass(method);
-            if (overriddenClass != null) {
-                for (int i = 0; i < methlist.size(); i++) {
-                    TypeElement te = utils.getEnclosingTypeElement(methlist.get(i));
-                    if (te == overriddenClass || utils.isSubclassOf(overriddenClass, te)) {
-                        methlist.remove(i);  // remove overridden method
-                        return;
-                    }
-                }
-            }
-        }
-
-        /**
-         * Search in the already found methods' list and check if it contains
-         * a method which is overriding the method parameter or is the method
-         * parameter itself.
-         *
-         * @param method method to be searched
-         */
-        private boolean overridingMethodFound(ExecutableElement method) {
-            TypeElement containingClass = utils.getEnclosingTypeElement(method);
-            for (ExecutableElement listmethod : methlist) {
-                if (containingClass == utils.getEnclosingTypeElement(listmethod)) {
-                    // it's the same method.
-                    return true;
-                }
-                TypeElement te = utils.overriddenClass(listmethod);
-                if (te == null) {
-                    continue;
-                }
-                if (te == containingClass || utils.isSubclassOf(te, containingClass)) {
-                    return true;
-                }
-            }
-            return false;
+    /*
+     * (Here "override" used as a noun, not a verb, for a short and descriptive
+     * name. Sadly, we cannot use "Override" as a complete name because a clash
+     * with @java.lang.Override would make it inconvenient.)
+     *
+     * Used to provide additional attributes to the otherwise boolean
+     * "overrides(a, b)" relationship.
+     *
+     * Overriding method could be a key in a map and an instance of this
+     * record could be the value.
+     */
+    private record OverrideInfo(ExecutableElement overriddenMethod,
+                                boolean simpleOverride) {
+        @Override // for debugging
+        public String toString() {
+            return overriddenMethod.getEnclosingElement()
+                    + "::" + overriddenMethod + ", simple=" + simpleOverride;
         }
     }
 
-    /**
-     * A simple container to encapsulate an overridden method
-     * and the type of override.
-     */
-    static class OverriddenMethodInfo {
-        final ExecutableElement overridden;
-        final boolean simpleOverride;
+    @Override
+    public int hashCode() {
+        return te.hashCode();
+    }
 
-        public OverriddenMethodInfo(ExecutableElement overridden, boolean simpleOverride) {
-            this.overridden = overridden;
-            this.simpleOverride = simpleOverride;
-        }
-
-        @Override
-        public String toString() {
-            return "OverriddenMethodInfo[" + overridden + ",simple:" + simpleOverride + "]";
-        }
+    @Override
+    public boolean equals(Object obj) {
+        if (!(obj instanceof VisibleMemberTable other))
+            return false;
+        return te.equals(other.te);
     }
 }
