@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -23,18 +23,18 @@
 
 /*
  * @test
+ * @enablePreview
  * @run testng TestReshape
  */
 
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.SequenceLayout;
-
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.SequenceLayout;
+import java.lang.foreign.ValueLayout;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
 import java.util.stream.LongStream;
 
-import jdk.incubator.foreign.ValueLayout;
 import org.testng.annotations.*;
 import static org.testng.Assert.*;
 
@@ -76,31 +76,13 @@ public class TestReshape {
         seq.reshape(-2, 2);
     }
 
-    @Test(expectedExceptions = UnsupportedOperationException.class)
-    public void testReshapeOnUnboundSequence() {
-        SequenceLayout seq = MemoryLayout.sequenceLayout(ValueLayout.JAVA_INT);
-        seq.reshape(3, 2);
-    }
-
-    @Test(expectedExceptions = UnsupportedOperationException.class)
-    public void testFlattenOnUnboundSequence() {
-        SequenceLayout seq = MemoryLayout.sequenceLayout(ValueLayout.JAVA_INT);
-        seq.flatten();
-    }
-
-    @Test(expectedExceptions = UnsupportedOperationException.class)
-    public void testFlattenOnUnboundNestedSequence() {
-        SequenceLayout seq = MemoryLayout.sequenceLayout(4, MemoryLayout.sequenceLayout(ValueLayout.JAVA_INT));
-        seq.flatten();
-    }
-
     static void assertDimensions(SequenceLayout layout, long... dims) {
         SequenceLayout prev = null;
         for (int i = 0 ; i < dims.length ; i++) {
             if (prev != null) {
                 layout = (SequenceLayout)prev.elementLayout();
             }
-            assertEquals(layout.elementCount().getAsLong(), dims[i]);
+            assertEquals(layout.elementCount(), dims[i]);
             prev = layout;
         }
     }
