@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2019, 2023, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -23,51 +23,70 @@
 
 /*
  * @test
- * @requires ((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64"
- * @run testng/othervm -Xmx4G -XX:MaxDirectMemorySize=1M TestSegments
+ * @enablePreview
+ * @requires jdk.foreign.linker != "UNSUPPORTED"
+ * @run testng/othervm -Xmx4G -XX:MaxDirectMemorySize=1M --enable-native-access=ALL-UNNAMED TestSegments
  */
 
-import jdk.incubator.foreign.MemoryLayout;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
-import jdk.incubator.foreign.ValueLayout;
+import java.lang.foreign.*;
+
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
 import java.lang.invoke.VarHandle;
 import java.nio.ByteBuffer;
 import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.IntFunction;
 import java.util.function.Supplier;
 
-import static jdk.incubator.foreign.ValueLayout.JAVA_INT;
+import static java.lang.foreign.ValueLayout.JAVA_INT;
 import static org.testng.Assert.*;
 
 public class TestSegments {
 
     @Test(dataProvider = "badSizeAndAlignments", expectedExceptions = IllegalArgumentException.class)
     public void testBadAllocateAlign(long size, long align) {
-        MemorySegment.allocateNative(size, align, ResourceScope.newImplicitScope());
+        Arena.ofAuto().allocate(size, align);
+    }
+
+    @Test
+    public void testZeroLengthNativeSegment() {
+        try (Arena arena = Arena.ofConfined()) {
+            Arena session = arena;
+            var segment = session.allocate(0, 1);
+            assertEquals(segment.byteSize(), 0);
+            MemoryLayout seq = MemoryLayout.sequenceLayout(0, JAVA_INT);
+            segment = session.allocate(seq);
+            assertEquals(segment.byteSize(), 0);
+            assertEquals(segment.address() % seq.byteAlignment(), 0);
+            segment = session.allocate(0, 4);
+            assertEquals(segment.byteSize(), 0);
+            assertEquals(segment.address() % 4, 0);
+            MemorySegment rawAddress = MemorySegment.ofAddress(segment.address());
+            assertEquals(rawAddress.byteSize(), 0);
+            assertEquals(rawAddress.address() % 4, 0);
+        }
     }
 
     @Test(expectedExceptions = { OutOfMemoryError.class,
                                  IllegalArgumentException.class })
     public void testAllocateTooBig() {
-        MemorySegment.allocateNative(Long.MAX_VALUE, ResourceScope.newImplicitScope());
+        Arena.ofAuto().allocate(Long.MAX_VALUE, 1);
     }
 
     @Test(expectedExceptions = OutOfMemoryError.class)
     public void testNativeAllocationTooBig() {
-        MemorySegment segment = MemorySegment.allocateNative(1024 * 1024 * 8 * 2, ResourceScope.newImplicitScope()); // 2M
+        Arena scope = Arena.ofAuto();
+        MemorySegment segment = scope.allocate(1024L * 1024 * 8 * 2, 1); // 2M
     }
 
     @Test
     public void testNativeSegmentIsZeroed() {
-        VarHandle byteHandle = MemoryLayout.sequenceLayout(ValueLayout.JAVA_BYTE)
-                .varHandle(MemoryLayout.PathElement.sequenceElement());
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(1000, 1, scope);
+        VarHandle byteHandle = ValueLayout.JAVA_BYTE.arrayElementVarHandle();
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(1000, 1);
             for (long i = 0 ; i < segment.byteSize() ; i++) {
                 assertEquals(0, (byte)byteHandle.get(segment, i));
             }
@@ -76,10 +95,9 @@ public class TestSegments {
 
     @Test
     public void testSlices() {
-        VarHandle byteHandle = MemoryLayout.sequenceLayout(ValueLayout.JAVA_BYTE)
-                .varHandle(MemoryLayout.PathElement.sequenceElement());
-        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
-            MemorySegment segment = MemorySegment.allocateNative(10, 1, scope);
+        VarHandle byteHandle = ValueLayout.JAVA_BYTE.arrayElementVarHandle();
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(10, 1);
             //init
             for (byte i = 0 ; i < segment.byteSize() ; i++) {
                 byteHandle.set(segment, (long)i, i);
@@ -96,31 +114,115 @@ public class TestSegments {
         }
     }
 
+    @Test(dataProvider = "segmentFactories")
+    public void testDerivedScopes(Supplier<MemorySegment> segmentSupplier) {
+        MemorySegment segment = segmentSupplier.get();
+        assertEquals(segment.scope(), segment.scope());
+        // one level
+        assertEquals(segment.asSlice(0).scope(), segment.scope());
+        assertEquals(segment.asReadOnly().scope(), segment.scope());
+        // two levels
+        assertEquals(segment.asSlice(0).asReadOnly().scope(), segment.scope());
+        assertEquals(segment.asReadOnly().asSlice(0).scope(), segment.scope());
+        // check fresh every time
+        MemorySegment another = segmentSupplier.get();
+        assertNotEquals(segment.scope(), another.scope());
+    }
+
+    @Test
+    public void testEqualsOffHeap() {
+        try (Arena arena = Arena.ofConfined()) {
+            Arena scope1 = arena;
+            MemorySegment segment = scope1.allocate(100, 1);
+            assertEquals(segment, segment.asReadOnly());
+            assertEquals(segment, segment.asSlice(0, 100));
+            assertNotEquals(segment, segment.asSlice(10, 90));
+            assertEquals(segment, segment.asSlice(0, 90));
+            assertEquals(segment, MemorySegment.ofAddress(segment.address()));
+            MemorySegment segment2 = arena.allocate(100, 1);
+            assertNotEquals(segment, segment2);
+        }
+    }
+
+    @Test
+    public void testEqualsOnHeap() {
+        MemorySegment segment = MemorySegment.ofArray(new byte[100]);
+        assertEquals(segment, segment.asReadOnly());
+        assertEquals(segment, segment.asSlice(0, 100));
+        assertNotEquals(segment, segment.asSlice(10, 90));
+        assertEquals(segment, segment.asSlice(0, 90));
+        MemorySegment segment2 = MemorySegment.ofArray(new byte[100]);
+        assertNotEquals(segment, segment2);
+    }
+
+    @Test
+    public void testHashCodeOffHeap() {
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(100, 1);
+            assertEquals(segment.hashCode(), segment.asReadOnly().hashCode());
+            assertEquals(segment.hashCode(), segment.asSlice(0, 100).hashCode());
+            assertEquals(segment.hashCode(), segment.asSlice(0, 90).hashCode());
+            assertEquals(segment.hashCode(), MemorySegment.ofAddress(segment.address()).hashCode());
+        }
+    }
+
+    @Test
+    public void testHashCodeOnHeap() {
+        MemorySegment segment = MemorySegment.ofArray(new byte[100]);
+        assertEquals(segment.hashCode(), segment.asReadOnly().hashCode());
+        assertEquals(segment.hashCode(), segment.asSlice(0, 100).hashCode());
+        assertEquals(segment.hashCode(), segment.asSlice(0, 90).hashCode());
+    }
+
     @Test(expectedExceptions = IndexOutOfBoundsException.class)
     public void testSmallSegmentMax() {
-        long offset = (long)Integer.MAX_VALUE + (long)Integer.MAX_VALUE + 2L + 6L; // overflows to 6 when casted to int
-        MemorySegment memorySegment = MemorySegment.allocateNative(10, ResourceScope.newImplicitScope());
+        long offset = (long)Integer.MAX_VALUE + (long)Integer.MAX_VALUE + 2L + 6L; // overflows to 6 when cast to int
+        Arena scope = Arena.ofAuto();
+        MemorySegment memorySegment = scope.allocate(10, 1);
         memorySegment.get(JAVA_INT, offset);
     }
 
     @Test(expectedExceptions = IndexOutOfBoundsException.class)
     public void testSmallSegmentMin() {
-        long offset = ((long)Integer.MIN_VALUE * 2L) + 6L; // underflows to 6 when casted to int
-        MemorySegment memorySegment = MemorySegment.allocateNative(10, ResourceScope.newImplicitScope());
+        long offset = ((long)Integer.MIN_VALUE * 2L) + 6L; // underflows to 6 when cast to int
+        Arena scope = Arena.ofAuto();
+        MemorySegment memorySegment = scope.allocate(10L, 1);
         memorySegment.get(JAVA_INT, offset);
     }
 
-    @Test(dataProvider = "segmentFactories")
-    public void testAccessModesOfFactories(Supplier<MemorySegment> memorySegmentSupplier) {
-        MemorySegment segment = memorySegmentSupplier.get();
-        assertFalse(segment.isReadOnly());
-        tryClose(segment);
+    @Test
+    public void testSegmentOOBMessage() {
+        try {
+            var segment = Arena.global().allocate(10, 1);
+            segment.getAtIndex(ValueLayout.JAVA_INT, 2);
+        } catch (IndexOutOfBoundsException ex) {
+            assertTrue(ex.getMessage().contains("Out of bound access"));
+            assertTrue(ex.getMessage().contains("offset = 8"));
+            assertTrue(ex.getMessage().contains("length = 4"));
+        }
     }
 
-    static void tryClose(MemorySegment segment) {
-        if (segment.scope() != ResourceScope.globalScope()) {
-            segment.scope().close();
-        }
+    @Test(dataProvider = "segmentFactories")
+    public void testAccessModesOfFactories(Supplier<MemorySegment> segmentSupplier) {
+        MemorySegment segment = segmentSupplier.get();
+        assertFalse(segment.isReadOnly());
+    }
+
+    @DataProvider(name = "scopes")
+    public Object[][] scopes() {
+        return new Object[][] {
+                { Arena.ofAuto(), false },
+                { Arena.global(), false },
+                { Arena.ofConfined(), true },
+                { Arena.ofShared(), false }
+        };
+    }
+
+    @Test(dataProvider = "scopes")
+    public void testIsAccessibleBy(Arena arena, boolean isConfined) {
+        MemorySegment segment = MemorySegment.NULL.reinterpret(arena, null);
+        assertTrue(segment.isAccessibleBy(Thread.currentThread()));
+        assertTrue(segment.isAccessibleBy(new Thread()) != isConfined);
     }
 
     @DataProvider(name = "segmentFactories")
@@ -133,24 +235,23 @@ public class TestSegments {
                 () -> MemorySegment.ofArray(new int[] { 1, 2, 3, 4 }),
                 () -> MemorySegment.ofArray(new long[] { 1l, 2l, 3l, 4l } ),
                 () -> MemorySegment.ofArray(new short[] { 1, 2, 3, 4 } ),
-                () -> MemorySegment.allocateNative(4, ResourceScope.newImplicitScope()),
-                () -> MemorySegment.allocateNative(4, 8, ResourceScope.newImplicitScope()),
-                () -> MemorySegment.allocateNative(JAVA_INT, ResourceScope.newImplicitScope()),
-                () -> MemorySegment.allocateNative(4, ResourceScope.newImplicitScope()),
-                () -> MemorySegment.allocateNative(4, 8, ResourceScope.newImplicitScope()),
-                () -> MemorySegment.allocateNative(JAVA_INT, ResourceScope.newImplicitScope())
+                () -> Arena.ofAuto().allocate(4L, 1),
+                () -> Arena.ofAuto().allocate(4L, 8),
+                () -> Arena.ofAuto().allocate(JAVA_INT),
+                () -> Arena.ofAuto().allocate(4L, 1),
+                () -> Arena.ofAuto().allocate(4L, 8),
+                () -> Arena.ofAuto().allocate(JAVA_INT)
 
         );
         return l.stream().map(s -> new Object[] { s }).toArray(Object[][]::new);
     }
 
     @Test(dataProvider = "segmentFactories")
-    public void testFill(Supplier<MemorySegment> memorySegmentSupplier) {
-        VarHandle byteHandle = MemoryLayout.sequenceLayout(ValueLayout.JAVA_BYTE)
-                .varHandle(MemoryLayout.PathElement.sequenceElement());
+    public void testFill(Supplier<MemorySegment> segmentSupplier) {
+        VarHandle byteHandle = ValueLayout.JAVA_BYTE.arrayElementVarHandle();
 
         for (byte value : new byte[] {(byte) 0xFF, (byte) 0x00, (byte) 0x45}) {
-            MemorySegment segment = memorySegmentSupplier.get();
+            MemorySegment segment = segmentSupplier.get();
             segment.fill(value);
             for (long l = 0; l < segment.byteSize(); l++) {
                 assertEquals((byte) byteHandle.get(segment, l), value);
@@ -167,46 +268,56 @@ public class TestSegments {
                 assertEquals((byte) byteHandle.get(segment, l), (byte) ~value);
             }
             assertEquals((byte) byteHandle.get(segment, segment.byteSize() - 1L), value);
-            tryClose(segment);
         }
     }
 
     @Test(dataProvider = "segmentFactories")
-    public void testFillClosed(Supplier<MemorySegment> memorySegmentSupplier) {
-        MemorySegment segment = memorySegmentSupplier.get();
-        tryClose(segment);
-        if (!segment.scope().isAlive()) {
-            try {
-                segment.fill((byte) 0xFF);
-                fail();
-            } catch (IllegalStateException ex) {
-                assertTrue(true);
-            }
+    public void testHeapBase(Supplier<MemorySegment> segmentSupplier) {
+        MemorySegment segment = segmentSupplier.get();
+        assertEquals(segment.isNative(), !segment.heapBase().isPresent());
+        segment = segment.asReadOnly();
+        assertTrue(segment.heapBase().isEmpty());
+    }
+
+    @Test
+    public void testScopeConfinedArena() {
+        try (Arena arena = Arena.ofConfined()) {
+            MemorySegment segment = arena.allocate(100);
+            assertEquals(segment.scope(), arena.scope());
         }
     }
 
-    @Test(dataProvider = "segmentFactories")
-    public void testNativeSegments(Supplier<MemorySegment> memorySegmentSupplier) {
-        MemorySegment segment = memorySegmentSupplier.get();
-        try {
-            segment.address();
-            assertTrue(segment.isNative());
-        } catch (UnsupportedOperationException exception) {
-            assertFalse(segment.isNative());
+    @Test
+    public void testScopeSharedArena() {
+        try (Arena arena = Arena.ofShared()) {
+            MemorySegment segment = arena.allocate(100);
+            assertEquals(segment.scope(), arena.scope());
         }
-        tryClose(segment);
+    }
+
+    @Test
+    public void testScopeAutoArena() {
+        Arena arena = Arena.ofAuto();
+        MemorySegment segment = arena.allocate(100);
+        assertEquals(segment.scope(), arena.scope());
+    }
+
+    @Test
+    public void testScopeGlobalArena() {
+        Arena arena = Arena.global();
+        MemorySegment segment = arena.allocate(100);
+        assertEquals(segment.scope(), arena.scope());
     }
 
     @Test(dataProvider = "segmentFactories", expectedExceptions = UnsupportedOperationException.class)
-    public void testFillIllegalAccessMode(Supplier<MemorySegment> memorySegmentSupplier) {
-        MemorySegment segment = memorySegmentSupplier.get();
+    public void testFillIllegalAccessMode(Supplier<MemorySegment> segmentSupplier) {
+        MemorySegment segment = segmentSupplier.get();
         segment.asReadOnly().fill((byte) 0xFF);
-        tryClose(segment);
     }
 
     @Test(dataProvider = "segmentFactories")
-    public void testFillThread(Supplier<MemorySegment> memorySegmentSupplier) throws Exception {
-        MemorySegment segment = memorySegmentSupplier.get();
+    public void testFillThread(Supplier<MemorySegment> segmentSupplier) throws Exception {
+        MemorySegment segment = segmentSupplier.get();
         AtomicReference<RuntimeException> exception = new AtomicReference<>();
         Runnable action = () -> {
             try {
@@ -219,29 +330,41 @@ public class TestSegments {
         thread.start();
         thread.join();
 
-        if (segment.scope().ownerThread() != null) {
+        if (!segment.isAccessibleBy(Thread.currentThread())) {
             RuntimeException e = exception.get();
-            if (!(e instanceof IllegalStateException)) {
-                throw e;
-            }
+            throw e;
         } else {
             assertNull(exception.get());
         }
-        tryClose(segment);
     }
 
     @Test
     public void testFillEmpty() {
         MemorySegment.ofArray(new byte[] { }).fill((byte) 0xFF);
         MemorySegment.ofArray(new byte[2]).asSlice(0, 0).fill((byte) 0xFF);
-        MemorySegment.ofByteBuffer(ByteBuffer.allocateDirect(0)).fill((byte) 0xFF);
+        MemorySegment.ofBuffer(ByteBuffer.allocateDirect(0)).fill((byte) 0xFF);
     }
 
     @Test(dataProvider = "heapFactories")
-    public void testBigHeapSegments(IntFunction<MemorySegment> heapSegmentFactory, int factor) {
-        int bigSize = (Integer.MAX_VALUE / factor) + 1;
-        MemorySegment segment = heapSegmentFactory.apply(bigSize);
-        assertTrue(segment.byteSize() > 0);
+    public void testVirtualizedBaseAddress(IntFunction<MemorySegment> heapSegmentFactory, int factor) {
+        MemorySegment segment = heapSegmentFactory.apply(10);
+        assertEquals(segment.address(), 0); // base address should be zero (no leaking of impl details)
+        MemorySegment end = segment.asSlice(segment.byteSize(), 0);
+        assertEquals(end.address(), segment.byteSize()); // end address should be equal to segment byte size
+    }
+
+    @Test
+    void testReinterpret() {
+        AtomicInteger counter = new AtomicInteger();
+        try (Arena arena = Arena.ofConfined()){
+            // check size
+            assertEquals(MemorySegment.ofAddress(42).reinterpret(100).byteSize(), 100);
+            assertEquals(MemorySegment.ofAddress(42).reinterpret(100, Arena.ofAuto(), null).byteSize(), 100);
+            // check scope and cleanup
+            assertEquals(MemorySegment.ofAddress(42).reinterpret(100, arena, s -> counter.incrementAndGet()).scope(), arena.scope());
+            assertEquals(MemorySegment.ofAddress(42).reinterpret(arena, s -> counter.incrementAndGet()).scope(), arena.scope());
+        }
+        assertEquals(counter.get(), 2);
     }
 
     @DataProvider(name = "badSizeAndAlignments")
@@ -256,6 +379,7 @@ public class TestSegments {
     @DataProvider(name = "heapFactories")
     public Object[][] heapFactories() {
         return new Object[][] {
+                { (IntFunction<MemorySegment>) size -> MemorySegment.ofArray(new byte[size]), 1 },
                 { (IntFunction<MemorySegment>) size -> MemorySegment.ofArray(new char[size]), 2 },
                 { (IntFunction<MemorySegment>) size -> MemorySegment.ofArray(new short[size]), 2 },
                 { (IntFunction<MemorySegment>) size -> MemorySegment.ofArray(new int[size]), 4 },
