@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -69,10 +69,10 @@ public class JapanEraNameCompatTest {
             { KOREAN,   KoreanName, "R" },
             { CHINA,    CJName,     "R" },
             { TAIWAN,   CJName,     "R" }, // fallback to zh
-            { new Locale("ar"), ArabicName, ArabicName },
-            { new Locale("th"), ThaiName, "R" },
+            { Locale.of("ar"), ArabicName, ArabicName },
+            { Locale.of("th"), ThaiName, "R" },
             // hi_IN fallback to root
-            { new Locale("hi", "IN"), EngName, "R" }
+            { Locale.of("hi", "IN"), EngName, "R" }
         };
     }
 
@@ -91,20 +91,20 @@ public class JapanEraNameCompatTest {
             { KOREAN, KoreanName, KoreanName },
             { CHINA, CJName, CJName },
             { TAIWAN, CJName, CJName },
-            { new Locale("ar"), ArabicName, ArabicName },
-            { new Locale("th"), ThaiName, ThaiName },
-            { new Locale("hi", "IN"), HindiName, HindiName },
-            { new Locale("ru"), RussianName, RussianName },
-            { new Locale("sr"), SerbianName, SerbianName },
+            { Locale.of("ar"), ArabicName, ArabicName },
+            { Locale.of("th"), ThaiName, ThaiName },
+            { Locale.of("hi", "IN"), HindiName, HindiName },
+            { Locale.of("ru"), RussianName, RussianName },
+            { Locale.of("sr"), SerbianName, SerbianName },
             { Locale.forLanguageTag("sr-Latn"), SerbLatinName, SerbLatinName },
-            { new Locale("hr"), EngName, EngName },
-            { new Locale("in"), EngName, EngName },
-            { new Locale("lt"), EngName, EngName },
-            { new Locale("nl"), EngName, EngName },
-            { new Locale("no"), EngName, "R" },
-            { new Locale("sv"), EngName, EngName },
+            { Locale.of("hr"), EngName, EngName },
+            { Locale.of("in"), EngName, EngName },
+            { Locale.of("lt"), EngName, EngName },
+            { Locale.of("nl"), EngName, EngName },
+            { Locale.of("no"), EngName, "R" },
+            { Locale.of("sv"), EngName, EngName },
             // el fallback to root
-            { new Locale("el"), EngName, EngName }
+            { Locale.of("el"), EngName, EngName }
         };
     }
 
