@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2016, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2016, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -62,7 +62,7 @@ public class Bug8135061 {
          * return "nv" as the matching tag
          */
         ranges = LanguageRange.parse("i-navajo");
-        locales = Collections.singleton(new Locale("nv"));
+        locales = Collections.singleton(Locale.of("nv"));
 
         try {
             Locale match = Locale.lookup(ranges, locales);
