@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -46,7 +46,7 @@ public class GenerateKeyList {
         Locale[] availableLocales = Locale.getAvailableLocales();
 
         ResourceBundle bundle = ResourceBundle.getBundle(packageName +
-                        resourceBundleName, new Locale("", "", ""));
+                        resourceBundleName, Locale.of(""));
         dumpResourceBundle(resourceBundleName + "/", bundle, out);
         for (int i = 0; i < availableLocales.length; i++) {
             bundle = ResourceBundle.getBundle(packageName + resourceBundleName,
