@@ -2,8 +2,9 @@
  * @test /nodynamiccopyright/
  * @bug 8263590
  * @summary Verify correct warnings are produced for raw types in bindings
- * @compile/ref=RawTypeBindingWarning.out -Xlint:rawtypes -XDrawDiagnostics --enable-preview -source ${jdk.version} RawTypeBindingWarning.java
+ * @compile/ref=RawTypeBindingWarning.out -Xlint:rawtypes -XDrawDiagnostics RawTypeBindingWarning.java
  */
+
 public class RawTypeBindingWarning<T> {
     public static boolean t(Object o) {
         return o instanceof RawTypeBindingWarning w;
@@ -14,11 +15,7 @@ public class RawTypeBindingWarning<T> {
             default -> {}
         }
         switch (o) {
-            case (RawTypeBindingWarning w) -> {}
-            default -> {}
-        }
-        switch (o) {
-            case (RawTypeBindingWarning w && false) -> {}
+            case RawTypeBindingWarning w when w == null -> {}
             default -> {}
         }
     }
